# ChangeLog for app-emulation/qemu-softmmu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-softmmu/Attic/ChangeLog,v 1.63 2009/03/22 23:19:01 lu_zero Exp $

*qemu-softmmu-0.10.1 (22 Mar 2009)

  22 Mar 2009; Luca Barbato <lu_zero@gentoo.org>
  +qemu-softmmu-0.10.1.ebuild:
  Bugfix release

  21 Mar 2009; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.10.0.ebuild:
  typo, thanks to Jonathan-Christofer Demay <jcdemay@gmail.com> for spotting
  it

  18 Mar 2009; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.10.0.ebuild:
  disable fdt since the current one is broken...

  17 Mar 2009; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.10.0.ebuild:
  fdt is a fixed dep for now

  12 Mar 2009; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.10.0.ebuild:
  Simplify hardened support

  12 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  qemu-softmmu-0.9.1.ebuild, qemu-softmmu-0.9.1-r1.ebuild,
  qemu-softmmu-0.9.1-r2.ebuild, qemu-softmmu-0.9.1-r3.ebuild,
  qemu-softmmu-0.10.0.ebuild:
  Remove binchecks restriction (package installs binaries!).

  09 Mar 2009; Luca Barbato <lu_zero@gentoo.org> qemu-softmmu-0.10.0.ebuild:
  Fix leftover from kvm ebuild import

*qemu-softmmu-0.10.0 (06 Mar 2009)

  06 Mar 2009; Luca Barbato <lu_zero@gentoo.org> +files/qemu-ifdown,
  +files/qemu-ifup, +qemu-softmmu-0.10.0.ebuild:
  New release

  28 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  14 May 2008; Markus Meier <maekke@gentoo.org>
  qemu-softmmu-0.9.1-r3.ebuild:
  amd64 stable, bug #221943

  14 May 2008; Luca Barbato <lu_zero@gentoo.org>
  qemu-softmmu-0.9.1-r3.ebuild:
  Marked ppc

  14 May 2008; Christian Faulhammer <opfer@gentoo.org>
  qemu-softmmu-0.9.1-r3.ebuild:
  stable x86, security bug 212351

*qemu-softmmu-0.9.1-r3 (14 May 2008)

  14 May 2008; Luca Barbato <lu_zero@gentoo.org>
  +files/qemu-softmmu-0.9.1-CVE-2008-2004.patch,