@@ -10,12 +10,12 @@ DIST qemu-0.10.1.tar.gz 3658024 RMD160 f1dcd14a6981180b40b3048769bf861ac86fa0b3 
 DIST qemu-0.9.0.tar.gz 1901741 RMD160 4296542b6da18a6ac93d20787330d3c1c2ac0a19 SHA1 1e57e48a06eb8729913d92601000466eecef06cb SHA256 491facf9335654967ee53d8fb3540a274bfcbdcc225506bd38c4ee8e9ab405c1
 DIST qemu-0.9.1.tar.gz 2804104 RMD160 ee7bdb55a4540df2082d4bde9ebfd2f4e6f201a5 SHA1 630ea20b5989f0df00128de7f7be661c573ed041 SHA256 4756d0b4a4dc7dd88354bc6b37d381e4462dd328d0feef94803e90c0455835a5
 EBUILD qemu-softmmu-0.10.0.ebuild 3030 RMD160 793bb3412a5a5f2f1ccd77e66efad1acd5ee25b0 SHA1 7217891921c09486d490d9f4929585596a12b1a8 SHA256 5c5e028bf24d2d45c926a5bb94a9f7a803b98e3ad1debe6163e365d59c6c4905
-EBUILD qemu-softmmu-0.10.1.ebuild 3030 RMD160 1f63955c343b68d8661eec1f0f75131134bc7d89 SHA1 ebeb424abf95252e34f468337b4a031ba48593d9 SHA256 06d36b646e302e6f16997823d68dd2f1e5a0a545ab6a9d1c0f62fe638b97f289
+EBUILD qemu-softmmu-0.10.1.ebuild 3046 RMD160 803eba8503e2c0a7166d7221e8cf81f84a060f34 SHA1 953c48f771f0af2d5dceaa9f5a250e11730d7164 SHA256 f2b75fd2f5d24f5f87fe1a3daff521e2a17d07215cc7647fb9b1ece3ff0e71d2
 EBUILD qemu-softmmu-0.9.0-r1.ebuild 3175 RMD160 8a7d2bc7dd359671e5350537da075fc169168b60 SHA1 681d7c1f8ff28c30a4e9135e1e54d4075cd8fe7b SHA256 a381f8a2e983e6e6266657adab2cc59605bb3efc416dec4b7f901a51e0666412
 EBUILD qemu-softmmu-0.9.0.ebuild 3129 RMD160 dc0666aa7499db65af3f78d0d94a4253750927d5 SHA1 7493550b324f11ee72aa5ca994cdd207eb383c6f SHA256 ddd4eb920698c27d70a27d20eb1877b37a7824689340821f8cfe16698100942c
 EBUILD qemu-softmmu-0.9.1-r1.ebuild 2896 RMD160 4e5761b2f708d974b2026a006efb1cf9d23486da SHA1 426134eaa5e212c2e45ac36cbb87676a42371ae0 SHA256 261458bbcef7d5dc13dabad1cfddfd6656d8b57fd10e34011f88db6ed07ab502
 EBUILD qemu-softmmu-0.9.1-r2.ebuild 3445 RMD160 fff1fc780161c0b38bc4eb9dd12c05db5082ceb5 SHA1 263f864e0c73aecd80443009f9f8a82cc9c194a0 SHA256 b891d2a46654663015db4d9ad0bc0dfa7ff8c45d6a76e350004e036df9f020c0
 EBUILD qemu-softmmu-0.9.1-r3.ebuild 3497 RMD160 307e4ffb5529ef7fcae85143bc24b1215ef397ad SHA1 fed449d32e6d30cf4cca64a0dabc7f97ecc5f8ab SHA256 3dec7492e786102a0e766cde65fcb3f54c84e8bcdef03042fb82eca2ac0550e7
 EBUILD qemu-softmmu-0.9.1.ebuild 2824 RMD160 b264432c59a2c5a30c7ae4d5467574cbc9552b02 SHA1 48b5d381eea4ddfa2422ec5f5cd8487c3e9cdd97 SHA256 a390898d852e421e0921782da93974ba0d20a9f65879e875da0afda2ea7efb05
-MISC ChangeLog 10742 RMD160 7f514ead8c6a7763d4c41aa219c023b536ddd7de SHA1 d1449fe2ad8adecdd3a6db06cc2a75b4709cbf74 SHA256 335915a58ffcd0aaee9e70336cc9cea2ffcaec946767ba1854f51d344c50afd5
+MISC ChangeLog 10851 RMD160 f2debfc770e466b28a45d180cb3121872672e560 SHA1 97bfccd2523e2a13fcb675ef8931e2815b79d2d0 SHA256 9b80232dccf1f1f466ae0a5a34630166a00126f452f3796c8f247d919dd76a7a
 MISC metadata.xml 781 RMD160 74450132e66859323be46c121f5eecefb17bf582 SHA1 e1b83da2aeb047e497f2296c8a75d5ff29e3ee72 SHA256 09da74da4568ada6f342113ee454230473c8324cb74957028bf6f1d8864cac22
