@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-softmmu/Attic/qemu-softmmu-0.10.1.ebuild,v 1.1 2009/03/22 23:19:01 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-softmmu/Attic/qemu-softmmu-0.10.1.ebuild,v 1.2 2009/03/24 15:23:57 lu_zero Exp $
 
 inherit eutils flag-o-matic toolchain-funcs
 
@@ -87,8 +87,9 @@ src_install() {
 	emake DESTDIR="${D}" install || die "make install failed"
 
 	insinto /etc/qemu
-	dobin "${FILESDIR}/qemu-ifup"
-	dobin "${FILESDIR}/qemu-ifdown"
+	insopts -m0755
+	doins "${FILESDIR}/qemu-ifup"
+	doins "${FILESDIR}/qemu-ifdown"
 
 	dodoc pc-bios/README
 	dodoc qemu-doc.html
